[package]
name = "cldr_pluralrules_parser"
version = "0.1.0"
authors = ["unclenachoduh <kekoariggin@gmail.com>"]
description = "A parser for CLDR plural rules."
license = "Apache-2.0/MIT"
repository = "https://github.com/unclenachoduh/pluralrules"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
catregories = ["localization", "internationalization"]

[dependencies]
nom = "^4.0"
