[package]
name = "cldr_pluralrules_parser"
version = "1.0.1"
edition = "2018"
authors = ["Kekoa Riggin <kekoariggin@gmail.com>", "Zibi Braniecki <zbraniecki@mozilla.com>"]
description = "A parser for CLDR plural rules."
license = "Apache-2.0/MIT"
repository = "https://github.com/unclenachoduh/pluralrules"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]

[badges]
travis-ci = { repository = "zbraniecki/pluralrules", branch = "master" }
coveralls = { repository = "zbraniecki/pluralrules", branch = "master", service = "github" }

maintenance = { status = "actively-developed" }

[dependencies]
nom = "^4.1"
