[package]
name = "intl_pluralrules"
version = "4.0.1"
edition = "2018"
authors = ["Kekoa Riggin <kekoariggin@gmail.com>", "Zibi Braniecki <zbraniecki@mozilla.com>"]
description = "A plural rule categorizer for numeric input."
license = "Apache-2.0/MIT"
repository = "https://github.com/unclenachoduh/pluralrules"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]

[badges]
travis-ci = { repository = "zbraniecki/pluralrules", branch = "master" }
coveralls = { repository = "zbraniecki/pluralrules", branch = "master", service = "github" }

maintenance = { status = "actively-developed" }

[dependencies]
unic-langid = "0.7"

[dev-dependencies]
criterion = "0.3"
unic-langid = { version = "0.7", features = ["macros"] }

[[bench]]
name = "pluralrules"
harness = false
