[package]
name = "make_pluralrules"
version = "0.1.0"
authors = ["unclenachoduh <kekoariggin@gmail.com>"]

[dependencies]
cldr_pluralrules_parser = "0.1.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
quote = "0.6"
proc-macro2 = "0.4"

[dependencies.syn]
version = "0.14"
features = ["parsing", "full", "extra-traits"]