[package]
name = "make_pluralrules"
version = "0.4.2"
edition = "2018"
authors = ["Kekoa Riggin <kekoariggin@gmail.com>", "Zibi Braniecki <zbraniecki@mozilla.com>"]
description = "A Rustcode generator for CLDR plural rules."
license = "Apache-2.0/MIT"
repository = "https://github.com/unclenachoduh/pluralrules"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]

[badges]
travis-ci = { repository = "zbraniecki/pluralrules", branch = "master" }
coveralls = { repository = "zbraniecki/pluralrules", branch = "master", service = "github" }

maintenance = { status = "actively-developed" }

[dependencies]
cldr_pluralrules_parser = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
clap = "2.33"
